maze.lessons.maze.island.IslandMaze.scala.error
Escaper:33: error: not found: value NORTH
		if (getDirection() == NORTH) {
                                      ^Escaper:37: error: not found: value NORTH
			while (getDirection() != NORTH) {
                                                 ^